Add search handler in TutorController

--- a/WebContent/search-tutor.html
+++ b/WebContent/search-tutor.html
@@ -178,7 +178,7 @@
         <section class="search__container container">
             <form action="./TutorController" method="post" id="searchForm">
                 <div class="search__selector" tabindex="5">
-                    <span>Select Subject</span>
+                    <b>Select Subject</b>
                     <ul class="search__selector_courses">
                         <li class="search__selector_course"><span class="course_text">BCA</span>
                             <ul class="search__selector_durations">
